objects/Document_Data_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Field to store the value of corresponding Opportunity Role Contract Type for which the document is associated 
Projected Release: WW36 - 2016 
Commercial work stream PO: Miltos Vratimos</description>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>PPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <description>Field to store the value of corresponding opportunity SPWR Deal Type for which the document is associated 
Projected Release: WW36 - 2016 
Commercial work stream PO: Miltos Vratimos</description>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>PPA (including EPC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>Field to store the value of corresponding process level (at the Opportunity Role) for which the document is associated 
Projected Release: WW36 - 2016 
Commercial work stream PO: Miltos Vratimos</description>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Firm Offer Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Deal Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <description>Field to store the value of the effective end (discontinue) date of the associated document
Projected Release: WW36 - 2016 
Commercial work stream PO: Miltos Vratimos</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <description>Field to store the value of the effective start date of the associated document
Projected Release: WW36 - 2016 
Commercial work stream PO: Miltos Vratimos</description>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Required_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to store if the document will be required as part of an approval process 
Projected Release: WW36 - 2016 
Commercial work stream PO: Miltos Vratimos</description>
        <label>Required for Approval?</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Data Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Deal_Type__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Effective_End_Date__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Required_for_Approval__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Document Data Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Data Matrix</pluralLabel>
    <recordTypes>
        <fullName>Opportunity_Role</fullName>
        <active>true</active>
        <label>Opportunity Role</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>